<resources>
    <string name="app_name">IPFS Lite</string>
    <string name="channel_name">Storage Notifications</string>
    <string name="channel_description">For upload and download notifications</string>
    <string name="daemon_channel_name">Daemon Notifications</string>
    <string name="daemon_channel_description">Notification that the daemon has started</string>
    <string name="information">Information</string>
    <string name="content_url">Content - URL</string>
    <string name="peer_id">Peer ID</string>
    <string name="peer_access">The QR code contains the peer ID of \"%1$s\".</string>
    <string name="account_access">The QR code contains my peer ID.</string>
    <string name="multi_hash">Multihash</string>
    <string name="url_data_access">The QR code contains the URL to access the content of the data \"%1$s\".</string>
    <string name="feature_camera_required">Feature camera required</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="restart_config_changed">Please restart the application due to the configuration changes.</string>
    <string name="cid_not_valid">CID is not valid</string>
    <string name="pid_not_valid">Peer ID is not valid</string>
    <string name="codec_not_supported">Not supported QR-Code</string>
    <string name="peers">Peers</string>
    <string name="files">Files</string>
    <string name="peer_exists_with_pid">A peer with the ID already exists in your contacts</string>
    <string name="same_pid_like_host">Peer ID is your Host Peer ID</string>
    <string name="action_select_all">Select All</string>
    <string name="general_settings">General Settings</string>
    <string name="no_activity_found_to_handle_uri">No application found which support this kind of file.</string>
    <string name="action_edit_cid">Edit Content (CID)</string>
    <string name="connection_timeout">Connection Timeout %1$s[s]</string>
    <string name="publisher_service_time">Publisher Service Interval %1$s[h]</string>
    <string name="app_settings">Settings</string>
    <string name="permission_camera_denied">Permission camera</string>
    <string name="documentation">Documentation</string>
    <string name="no_marked_file_delete">No files marked for deletion</string>
    <string name="swarm">Swarm</string>
    <string name="file_not_found">File could not be downloaded</string>
    <string name="name">Name</string>
    <string name="name_not_valid">Name not valid</string>
    <string name="action_peer_add">Add Peer…</string>
    <string name="download_failed">Download failed for \"%1$s\"</string>
    <string name="added_pid_to_peers">Added \"%1$s\" to your peers</string>
    <string name="search">Search</string>
    <string name="copy_to">Copy to…</string>
    <string name="content_already_exists">Content exists already with CID \"%1$s\"</string>

    <string name="identification">Identification</string>
    <string name="account_address">Identification - Peer ID</string>
    <string name="user_account_address_message">You can share your Peer ID with others. So they can contact you, by simply scanning the QR code.</string>
    <string name="delete">Delete</string>
    <string name="revert_operation">Revert</string>
    <string name="delete_files">Delete %1$s files</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_users">Delete %1$s peers</string>
    <string name="delete_user">Delete peer</string>
    <string name="add_account_text">You can add a new peer by providing its ID.</string>
    <string name="scan">Scan</string>
    <string name="new_peer">New Peer</string>
    <string name="peer_view_name_text">Optionally you can define a peer name</string>
    <string name="action_backup">Backup</string>
    <string name="ipfs">ipfs</string>
    <string name="action_add_dir">Import Folder</string>
    <string name="online">connected</string>

    <string name="automatic_discovery_mode">Automatic Discovery Mode</string>
    <string name="automatic_discovery_mode_text"><![CDATA[<html>When this option is enabled, peers within the local network will automatically add to your contacts.</html>]]></string>

    <string name="traffic">%1$s [B]</string>
    <string name="traffic_kb">%1$s [kB]</string>
    <string name="traffic_mb">%1$s [MB]</string>
    <string name="file_has_no_read_permission">No \"Read Permission\" for the file</string>
    <string name="file_has_no_write_permission">No \"Write Permission\" on the location</string>
    <string name="multi_address">Multi Address</string>
    <string name="peer_address_text">Optional you can define a multi address for the peer</string>
    <string name="private_network">Private Network</string>
    <string name="enable_private_network">Enable Private Network</string>
    <string name="swarm_key">Swarm Key</string>
    <string name="swarm_key_text">In order to support a private network you have to provide a valid swarm key. Please import an existing \"swarm.key\" file.</string>
    <string name="swarm_key_not_valid">Swarm Key is not valid</string>
    <string name="file_not_valid">File is not valid</string>
    <string name="sort">Sort by</string>

    <string name="sort_name">File name (A to Z)</string>
    <string name="sort_name_inverse">File name (Z to A)</string>
    <string name="sort_date">Date (newest first)</string>
    <string name="sort_date_inverse">Date (oldest first)</string>
    <string name="sort_size">Size (descending)</string>
    <string name="sort_size_inverse">Size (ascending)</string>
    <string name="new_folder">New Folder</string>
    <string name="rename_file">Rename File</string>
    <string name="action_rename">Rename</string>
    <string name="open_with">Open with…</string>
    <string name="empty_text">No text defined</string>
    <string name="new_text_file">New Text File</string>
    <string name="homepage">Homepage</string>


    <string name="publish_files">Publishing…</string>
    <string name="uploading">Uploading…</string>
    <string name="server_mode">Server Mode</string>

    <string name="browser">Browser</string>
    <string name="download_title">Download Data</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_added">Bookmark \"%1$s\" added</string>
    <string name="bookmark_removed">Bookmark \"%1$s\" removed</string>
    <string name="share_link">Share Link</string>
    <string name="find_page">Find in page</string>
    <string name="delete_browser_data">Delete browser data…</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="private_sharing_mode">Enable Private Sharing</string>
    <string name="private_sharing_mode_text"><![CDATA[<html>When this option is enabled, you can only exchange data with peers defined within your \"peers\" list.<br>In addition, these peers must also have activated \"Private Sharing\".</html>]]></string>
    <string name="private_sharing">Private Sharing</string>
    <string name="port">Port</string>
    <string name="seeding">Seeding</string>
    <string name="leeching">Leaching</string>
    <string name="reachable">Reachable</string>
    <string name="service_is_running">Service is running…</string>
    <string name="edit_text">Edit text…</string>
    <string name="connecting">Connecting…</string>
    <string name="refreshing">Refreshing…</string>
    <string name="publisher_service_details">When the application runs in server mode, the publisher service interval defines the time period when your content will be republished to IPFS.</string>
    <string name="connection_timeout_details">The connection timeout defines the maximum time for finding a peer on IPFS.</string>
    <string name="enter_url">Scan-URL or search input</string>
    <string name="warning">Warning</string>
    <string name="delete_browser_data_warning">All data will be removed, this includes your provided content and all browser data like cookies, cache data, etc.</string>



    <string name="redirect_url_support">Redirect URL Support</string>
    <string name="redirect_index_support">Redirect Index HTML</string>
    <string name="redirect_url_support_text">When this option is enabled, URLs which references IPFS or IPNS content, will be automatically redirected to the local IPFS node. Currently only URLs of the form https://xxx/ipfs/… or https://xxx/ipns/… will be redirected.</string>
    <string name="redirect_index_support_text">If this option is enabled, the local node tries to find an HTML index file for a given ipfs or ipfs URL if it is not specified.</string>
    <string name="url_access">The QR-Code contains the URL of the current website</string>
    <string name="scan_url">Scan URL</string>
    <string name="enable_publisher">Enable Publisher</string>
    <string name="cleanup_caches">Cleanup internal caches like IPFS data, pictures, etc</string>

    <string name="authentication">Authentication</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>


    <string name="enable_javascript">Enable Javascript</string>
    <string name="javascript_text">When javascript is disabled, many websites might not work properly.</string>
</resources>
