<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/selector_files"
        android:title="@string/files" />
    <item
        android:id="@+id/navigation_peers"
        android:icon="@drawable/selector_peers"
        android:title="@string/peers" />
    <item
        android:id="@+id/navigation_browser"
        android:icon="@drawable/view"
        android:title="@string/browser"
        app:iconTint="?android:colorPrimary" />
    <item
        android:id="@+id/navigation_swarm"
        android:icon="@drawable/selector_swarm"
        android:title="@string/swarm" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/tune"
        android:title="@string/settings"
        app:iconTint="?android:colorPrimary" />
</menu>

