<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>

        <item
            android:id="@+id/action_threads_search"
            android:orderInCategory="44"
            android:title="@string/find_page"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_share"
            android:icon="@drawable/share"
            android:orderInCategory="45"
            android:title="@string/share"
            app:iconTint="?android:textColorSecondary"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/new_content">

        <item
            android:id="@+id/action_new_folder"
            android:orderInCategory="48"
            android:title="@string/new_folder"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_add_folder"
            android:orderInCategory="49"
            android:title="@string/action_add_dir"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_text"
            android:orderInCategory="50"
            android:title="@string/new_text_file"
            app:showAsAction="never" />


    </group>

    <item
        android:id="@+id/action_backup"
        android:orderInCategory="51"
        android:title="@string/action_backup"
        app:showAsAction="never" />
</menu>