<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/new_peer"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?android:textColorPrimary" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@android:string/ok"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?android:colorPrimary" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_account_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?android:textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_account_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/multihash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/peer_id"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/scan_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/scan"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textColor="?android:textColorPrimary"
            app:drawableTint="?android:textColorPrimary"
            app:drawableTopCompat="@drawable/scan_code" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peer_view_name_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/peer_address_text"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/multi_address"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>