<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorChips"
            android:gravity="center"
            android:padding="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/server_mode"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


            <ImageView
                android:id="@+id/daemon_start"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:background="@drawable/round"
                android:clickable="true"
                android:elevation="4dp"
                android:focusable="true"
                android:gravity="center"
                android:padding="8dp"
                android:scaleType="center"
                android:src="@drawable/access_point_network"
                app:tint="?android:colorPrimary"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/seeding"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />


            <TextView
                android:id="@+id/seeding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/leeching"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />


            <TextView
                android:id="@+id/leeching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/reachable"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />


            <TextView
                android:id="@+id/reachable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/port"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />


            <TextView
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/general_settings"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?android:colorPrimary" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:text="@string/enable_publisher" />

        <TextView
            android:id="@+id/publisher_service_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textEnd"
            android:textColor="?android:textColorPrimary" />

        <SeekBar
            android:id="@+id/publisher_service_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/publisher_service_details" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_redirect_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:text="@string/redirect_url_support" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/redirect_url_support_text" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_redirect_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:text="@string/redirect_index_support" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/redirect_index_support_text" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_javascript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:text="@string/enable_javascript" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/javascript_text" />

        <TextView
            android:id="@+id/connection_timeout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_margin="16dp"
            android:textColor="?android:textColorPrimary" />

        <SeekBar
            android:id="@+id/connection_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/connection_timeout_details" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/automatic_discovery_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:text="@string/automatic_discovery_mode" />

        <TextView
            android:id="@+id/automatic_discovery_mode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp" />




    </LinearLayout>
</androidx.core.widget.NestedScrollView>